@@ -6,76 +6,112 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 # -*- perl -*-
 
 use lib "$ENV{'ACE_ROOT'}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
-$DAnCE = "$ENV{'ACE_ROOT'}/TAO/CIAO/DAnCE";
 $CIAO_ROOT = "$ENV{'CIAO_ROOT'}";
-$TAO_ROOT = "$ENV{'TAO_ROOT'}";
+$DANCE_ROOT = "$ENV{'DANCE_ROOT'}";
+
 $daemons_running = 0;
 $em_running = 0;
-$daemons = 1;
+
+$nr_daemon = 1;
 @ports = ( 30000 );
-@iorfiles = ( "NodeApp.ior" );
+@iorbases = ( "NodeApp.ior" );
+@iorfiles = 0;
+
+$controller_exec = "../SEC_CheckPoint/controller";
+
+$ior_embase = "EM.ior";
+$ior_emfile = 0;
+
+#  Processes
+$E = 0;
+$EM = 0;
+@DEAMONS = 0;
+
+# targets
+@tg_daemons = 0;
+$tg_exe_man = 0;
+$tg_executor = 0;
+
 $status = 0;
 $dat_file = "TestNodeManagerMap.dat";
 $cdp_file = "DeploymentPlan.cdp";
-$controller_exec = "../SEC_CheckPoint/controller";
 
-PerlACE::add_lib_path ('../SEC_CheckPoint');
+$ENV{"DANCE_TRACE_ENABLE"} = 0;
+$ENV{"CIAO_TRACE_ENABLE"} = 0;
 
-$E = 0;
-$EM = 0;
+sub create_targets {
+    #   daemon
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $tg_daemons[$i] = PerlACE::TestTarget::create_target ($i+1) || die "Create target for deamon $i failed\n";
+        $tg_daemons[$i]->AddLibPath ('../SEC_CheckPoint');
+    }
+    #   execution manager
+    $tg_exe_man = PerlACE::TestTarget::create_target (1) || die "Create target for EM failed\n";
+    $tg_exe_man->AddLibPath ('../SEC_CheckPoint');
+    #   executor (plan_launcher)
+    $tg_executor = PerlACE::TestTarget::create_target (1) || die "Create target for executor failed\n";
+    $tg_executor->AddLibPath ('../SEC_CheckPoint');
+}
+
+sub init_ior_files {
+    $ior_emfile = $tg_exe_man->LocalFile ($ior_embase);
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $iorfiles[$i] = $tg_daemons[$i]->LocalFile ($iorbases[$i]);
+    }
+    delete_ior_files ();
+}
 
 # Delete if there are any .ior files.
 sub delete_ior_files {
-    for ($i = 0; $i < $daemons; ++$i) {
-        unlink $iorfiles[$i];
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $tg_daemons[$i]->DeleteFile ($iorbases[$i]);
     }
-    unlink PerlACE::LocalFile ("EM.ior");
-    unlink PerlACE::LocalFile ("TSEC_CheckPoint.ior");
-    unlink PerlACE::LocalFile ("DAM.ior");
+    $tg_exe_man->DeleteFile ($ior_embase);
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $iorfiles[$i] = $tg_daemons[$i]->LocalFile ($iorbases[$i]);
+    }
 }
 
-sub kill_node_daemons {
-    for ($i = 0; $i < $daemons; ++$i) {
-        $Daemons[$i]->Kill (); $Daemons[$i]->TimedWait (1);
+sub kill_node_daemon {
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $DEAMONS[$i]->Kill (); $DEAMONS[$i]->TimedWait (1);
     }
 }
 
 sub kill_open_processes {
     if ($daemons_running == 1) {
-        kill_node_daemons ();
+        kill_node_daemon ();
     }
 
     if ($em_running == 1) {
-        $EM->Kill ();
-        $EM->TimedWait (1);
+        $EM->Kill (); $EM->TimedWait (1);
     }
 }
 
 sub run_node_daemons {
-    for ($i = 0; $i < $daemons; ++$i) {
+    for ($i = 0; $i < $nr_daemon; ++$i) {
+        $iorbase = $iorbases[$i];
         $iorfile = $iorfiles[$i];
         $port = $ports[$i];
-
         $iiop = "iiop://localhost:$port";
-        $node_app = "$CIAO_ROOT/bin/NodeApplication";
+        $node_app = "$CIAO_ROOT/bin/ciao_componentserver";
 
         $d_cmd = "$DANCE_ROOT/bin/dance_node_manager";
         $d_param = "-ORBEndpoint $iiop -s $node_app -o $iorfile -a \"-r\"";
 
-        $Daemons[$i] = new PerlACE::Process ($d_cmd, $d_param);
+        print "Run dance_node_manager with $d_param\n";
 
+        $DEAMONS[$i] = $tg_daemons[$i]->CreateProcess ($d_cmd, $d_param);
+        $DEAMONS[$i]->Spawn ();
 
-        $result = $Daemons[$i]->Spawn ();
-        push(@processes, $Daemons[$i]);
-
-        if (PerlACE::waitforfile_timed ($iorfile,
-                            $PerlACE::wait_interval_for_process_creation) == -1) {
+        if ($tg_daemons[$i]->WaitForFileTimed($iorbase,
+                                        $tg_daemons[$i]->ProcessStartWaitInterval ()) == -1) {
             print STDERR
-                "ERROR: The ior file of node daemon $i could not be found\n";
-            for (; $i > 0; --$i) {
-                $Daemons[$i]->Kill (); $Daemons[$i]->TimedWait (1);
+                "ERROR: The ior $iorfile file of node daemon $i could not be found\n";
+            for (; $i >= 0; --$i) {
+                $DEAMONS[$i]->Kill (); $DEAMONS[$i]->TimedWait (1);
             }
             return -1;
         }
@@ -84,7 +120,8 @@ sub run_node_daemons {
     return 0;
 }
 
-delete_ior_files ();
+create_targets ();
+init_ior_files ();
 
 
 # Invoke node daemons.
@@ -92,20 +129,18 @@ print "Invoking node daemons\n";
 $status = run_node_daemons ();
 
 if ($status != 0) {
-  print STDERR "ERROR: Unable to execute the node daemons\n";
-  exit 1;
+    print STDERR "ERROR: Unable to execute the node daemons\n";
+    exit 1;
 }
-
-$ns_running = 1;
 
 # Invoke execution manager.
 print "Invoking execution manager\n";
-$EM = new PerlACE::Process ("$CIAO_ROOT/bin/Execution_Manager",
-                            "-o EM.ior -i $dat_file");
+$EM = $tg_exe_man->CreateProcess ("$CIAO_ROOT/bin/Execution_Manager",
+                            "-o $ior_emfile -i $dat_file");
 $EM->Spawn ();
 
-if (PerlACE::waitforfile_timed ("EM.ior",
-                        $PerlACE::wait_interval_for_process_creation) == -1) {
+if ($tg_exe_man->WaitForFileTimed ($ior_embase,
+                                $tg_exe_man->ProcessStartWaitInterval ()) == -1) {
     print STDERR
       "ERROR: The ior file of execution manager could not be found\n";
     kill_open_processes ();
@@ -116,15 +151,14 @@ $em_running = 1;
 
 # Invoke executor - start the application -.
 print "Invoking executor - start the application -\n";
-$E =
-  new PerlACE::Process ("$CIAO_ROOT/bin/plan_launcher",
-                        "-p DeploymentPlan.cdp -k file://EM.ior -o DAM.ior");
+$E = $tg_executor->CreateProcess ("$CIAO_ROOT/bin/plan_launcher",
+                        "-p $cdp_file -k file://$ior_emfile -o DAM.ior");
 
-$E->SpawnWaitKill (60);
+$E->SpawnWaitKill ($tg_executor->ProcessStartWaitInterval ());
 
 
-if (PerlACE::waitforfile_timed ("TSEC_CheckPoint.ior",
-                        $PerlACE::wait_interval_for_process_creation) == -1) {
+if ($tg_exe_man->WaitForFileTimed ("TSEC_CheckPoint.ior",
+                                $tg_exe_man->ProcessStartWaitInterval ()) == -1) {
     print STDERR "ERROR: The ior file of sender could not be found\n";
     kill_open_processes ();
     exit 1;
@@ -132,8 +166,8 @@ if (PerlACE::waitforfile_timed ("TSEC_CheckPoint.ior",
 
 print "Running testcase 1\n";
 
-$controller = new PerlACE::Process ("$controller_exec", "-i 1 -k file://TSEC_CheckPoint.ior -t 1 -l 100000");
-$result = $controller->SpawnWaitKill (60);
+$controller = $tg_daemons[0]->CreateProcess ("$controller_exec", "-i 1 -k file://TSEC_CheckPoint.ior -t 1 -l 100000");
+$result = $controller->SpawnWaitKill ($tg_daemons[0]->ProcessStopWaitInterval ());
 
 if ($result != 0) {
     print STDERR "ERROR: The controller returned $result\n";
@@ -143,8 +177,8 @@ if ($result != 0) {
 
 print "Running testcase 2\n";
 
-$controller = new PerlACE::Process ("$controller_exec", "-i 2 -k file://TSEC_CheckPoint.ior -t 1 -l 100000");
-$result = $controller->SpawnWaitKill (60);
+$controller = $tg_daemons[0]->CreateProcess ("$controller_exec", "-i 2 -k file://TSEC_CheckPoint.ior -t 1 -l 100000");
+$result = $controller->SpawnWaitKill ($tg_daemons[0]->ProcessStopWaitInterval ());
 
 if ($result != 0) {
     print STDERR "ERROR: The controller returned $result\n";
@@ -153,8 +187,8 @@ if ($result != 0) {
 
 print "Running testcase 3\n";
 
-$controller = new PerlACE::Process ("$controller_exec", "-k file://TSEC_CheckPoint.ior -t 2 -l 100000");
-$result = $controller->SpawnWaitKill (60);
+$controller = $tg_daemons[0]->CreateProcess ("$controller_exec", "-k file://TSEC_CheckPoint.ior -t 2 -l 100000");
+$result = $controller->SpawnWaitKill ($tg_daemons[0]->ProcessStopWaitInterval ());
 
 if ($result != 0) {
     print STDERR "ERROR: The controller returned $result\n";
@@ -164,9 +198,9 @@ if ($result != 0) {
 
 # Invoke executor - stop the application -.
 print "Invoking executor - stop the application -\n";
-$E = new PerlACE::Process ("$CIAO_ROOT/bin/plan_launcher",
+$E = $tg_executor->CreateProcess ("$CIAO_ROOT/bin/plan_launcher",
                         "-k file://EM.ior -i file://DAM.ior");
-$E->SpawnWaitKill (60);
+$E->SpawnWaitKill ($tg_executor->ProcessStartWaitInterval ());
 
 print "Executor returned.\n";
 print "Shutting down rest of the processes.\n";
